# Build_with_cmake

./: .gitignore  CMakeLists.txt  README.md  install.sh  main.cpp
lib_math/: CMakeLists.txt  Maths.cpp  Maths.hpp
